--- a/screens/contact.html
+++ b/screens/contact.html
@@ -21,6 +21,7 @@
   <body ng-app="validateApp">
     <div class="header" id="myHeader">
       <div class="headerContainer">
+        <span class="hamburgerMenu" onclick="openNav()">&#9776;</span>
         <h1><a href="../index.html">Freesia</a></h1>
 
         <div class="headerOptions">
@@ -30,6 +31,27 @@
           <a href="contact.html">Contact</a>
         </div>
       </div>
+    </div>
+
+    <div id="mySidenav" class="sidenav">
+      <div class="sidenavHeader">
+        <Label>Menu</Label>
+        <div>
+          <button
+            href="javascript:void(0)"
+            class="closebtn"
+            onclick="closeNav()"
+          >
+            &times;
+          </button>
+        </div>
+        <div class="greyLine"></div>
+      </div>
+
+      <a href="../index.html">Home</a>
+      <a href="../index.html#productList">Products</a>
+      <a href="../screens/about.html">About</a>
+      <a href="contact.html">Contact</a>
     </div>
 
     <div class="mainContainer">
@@ -200,7 +222,7 @@
           </form>
         </div>
       </div>
-      
+
       <div class="googleMap" id="map">
         <!-- <div class="googleMap"> -->
         <!-- Google Map -->
@@ -217,6 +239,14 @@
       window.onscroll = function() {
         myFunction();
       };
+
+      function openNav() {
+  document.getElementById("mySidenav").style.width = "250px";
+}
+
+function closeNav() {
+  document.getElementById("mySidenav").style.width = "0";
+}
 
       var header = document.getElementById('myHeader');
       var sticky = header.offsetTop;
@@ -288,6 +318,30 @@
 </html>
 
 <style>
+  .hamburgerMenu {
+    display: none;
+  }
+  span {
+    font-weight: bolder;
+    text-decoration: underline;
+    text-decoration-color: #42d1d8;
+    font-size: 18px;
+  }
+
+  .content a {
+    /* text-decoration: none; */
+    color: #2854b8;
+  }
+  .sidenavHeader label {
+    display: none;
+  }
+  #mySidenav a {
+    display: none;
+  }
+
+  #mySidenav .closebtn {
+    display: none;
+  }
   body {
     background: #ffffff;
     font-family: 'Noto Serif SC', serif;
@@ -486,13 +540,133 @@
     /* margin-top: -1px; */
   }
   @media screen and (max-width: 800px) {
+
+    @media screen and (max-width: 800px) {
+
+h1 {
+margin-right: 600px;
+}
+
+.canvasContainer{
+display:none;
+}
+.headerOptions { display: none; }
+
+.header{
+padding-left: 0px;
+padding-right: 0px;
+}
+.content{
+margin-left:18px;
+width:90%;
+}
+
+.blueLine{
+display:block;
+width:100%;
+height:2px;
+background-color: #42d1d8;
+/* 42d1d8 */
+}
+.greyLine{
+display:block;
+width:100%;
+height:1px;
+background-color: lightgray;
+}
+.mainContainer{
+display:flex;
+flex-direction: column;
+width:100%;
+}
+.hamburgerMenu{
+display:block;
+font-size:30px;
+margin-left: 20px;
+margin-bottom: 7px;
+margin-right: 5px;
+text-decoration: none;
+}
+#mySidenav {
+
+height: 100%;
+width: 0;
+position: fixed;
+z-index: 2;
+top: 0;
+left: 0;
+background-color: white;
+overflow-x: hidden;
+transition: 0.5s;
+padding-top: 60px;
+-webkit-box-shadow: 0px 12px 25px rgba(0, 0, 0, 0.1); /* Safari 3-4, iOS 4.0.2 - 4.2, Android 2.3+ */
+-moz-box-shadow: 0px 12px 25px rgba(189, 91, 91, 0.2); /* Firefox 3.5 - 3.6 */
+box-shadow: 0px 12px 25px rgba(0, 0, 0, 0.5); /* Opera 10.5, IE 9, Firefox 4+, Chrome 6+, iOS 5 */
+font-family: 'Gugi', cursive;
+}
+
+.sidenavHeader{
+/* display: flex;
+flex-direction: row;
+width:100%; */
+margin-bottom: 15px;
+}
+
+.sidenavHeader Label{
+display:block;
+position: absolute;
+top:0;
+margin-top: 15px;
+padding-bottom: 25px;
+margin-left: 30px;
+font-size: 29px;
+color: #42d1d8;
+/* margin-left: 100px; */
+}
+#mySidenav a {
+padding: 8px 8px 8px 32px;
+text-decoration: none;
+font-size: 22px;
+color: #2854b8;
+display: block;
+transition: 0.3s;
+font-family: 'Gugi', cursive;
+background-color: white;
+}
+#mySidenav .closebtn {
+display:block;
+position: absolute;
+top: 0px;
+right: 25px;
+font-weight: 100;
+margin-left: 100px;
+color: black;
+cursor: none;
+padding-bottom: 0px;
+padding-bottom: 0px;
+  font-family: 'Noto Serif SC', serif;
+  font-size: 30px;
+  padding-top: 7px;
+}
+}
+@media screen and (min-width: 800px) {
+.blueLine{
+display:none;
+/* width:100%;
+border: 2px;
+border-color: #42d1d8 */
+}
+
+}
+
+
     .mainContainer {
       display: flex;
       flex: 1;
       flex-direction: column;
       bottom: 0px;
     }
-    .googleMap{
+    .googleMap {
       display: none;
     }
     .headerOptions {
@@ -503,35 +677,36 @@
       padding-right: 0px;
     }
     .formContent {
-    margin-left: 0px;
-    padding-top: 30px;
-    padding-bottom: 30px;
-    padding-right: 0px;
-    padding-left: 10px;
-    width: 100%;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  }
+      margin-left: 0px;
+      padding-top: 30px;
+      padding-bottom: 30px;
+      padding-right: 0px;
+      padding-left: 10px;
+      width: 100%;
+      box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1),
+        0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    }
     .content {
-    margin-top: 50px;
-    margin-left: 15px;
-    width: 90%;
-  }
-  /* .desc{
+      margin-top: 50px;
+      margin-left: 15px;
+      width: 90%;
+    }
+    /* .desc{
   } */
 
-  table {
-    width: 90%;
-  }
-.blueLine{
-display:block;
-width:100%;
-height:2px;
-background-color: #42d1d8;
-}
+    table {
+      width: 90%;
+    }
+    .blueLine {
+      display: block;
+      width: 100%;
+      height: 2px;
+      background-color: #42d1d8;
+    }
   }
   @media screen and (min-width: 800px) {
-    .blueLine{
-display:none;
-}
+    .blueLine {
+      display: none;
+    }
   }
 </style>
