--- a/screens/product/alphaTetralone.html
+++ b/screens/product/alphaTetralone.html
@@ -21,6 +21,7 @@
   <body>
     <div class="header" id="myHeader">
       <div class="headerContainer">
+          <span class="hamburgerMenu" onclick="openNav()">&#9776;</span>
         <h1><a href="../../index.html">Freesia</a></h1>
 
         <div class="headerOptions">
@@ -31,6 +32,20 @@
         </div>
       </div>
     </div>
+
+    <div id="mySidenav" class="sidenav">
+        <div class="sidenavHeader">
+          <Label>Menu</Label>
+            <div><button href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</button></div>
+            <div class="greyLine"></div>
+          </div>
+         
+        <a href="../../index.html">Home</a>
+        <a href="../../index.html#productList">Products</a>
+        <a href="../about.html">About</a>
+        <a href="../contact.html">Contact</a>
+
+      </div>
 
     <div class="mainContainer">
       <div class="content">
@@ -110,12 +125,32 @@
           header.classList.remove('sticky');
         }
       }
+      function openNav() {
+  document.getElementById("mySidenav").style.width = "250px";
+}
+
+function closeNav() {
+  document.getElementById("mySidenav").style.width = "0";
+}
     </script>
     <div class="blueLine"></div>
   </body>
 </html>
 
 <style>
+        .hamburgerMenu{
+    display:none;
+  }
+  .sidenavHeader Label{
+display:none;
+}
+#mySidenav a {
+  display:none;
+}
+
+#mySidenav .closebtn {
+  display:none;
+}
   body {
     background: #ffffff;
     font-family: 'Noto Serif SC', serif;
@@ -337,11 +372,86 @@ font-size: 28px;
     padding-top: 0px;
     margin-top: 0px;
   }
+  .headerContainer {
+    justify-content: flex-start;
+  }
   .blueLine{
 display:block;
 width:100%;
 height:2px;
 background-color: #42d1d8;
+}
+.greyLine{
+display:block;
+width:100%;
+height:1px;
+background-color: lightgray;
+}
+  .hamburgerMenu{
+    display:block;
+    font-size:30px;
+    margin-left: 20px;
+    margin-bottom: 7px;
+    margin-right: 5px;
+    text-decoration: none;
+    color: black;
+  }
+  #mySidenav {
+  
+  height: 100%;
+  width: 0;
+  position: fixed;
+  z-index: 2;
+  top: 0;
+  left: 0;
+  background-color: white;
+  overflow-x: hidden;
+  transition: 0.5s;
+  padding-top: 60px;
+  -webkit-box-shadow: 0px 12px 25px rgba(0, 0, 0, 0.1); /* Safari 3-4, iOS 4.0.2 - 4.2, Android 2.3+ */
+    -moz-box-shadow: 0px 12px 25px rgba(189, 91, 91, 0.2); /* Firefox 3.5 - 3.6 */
+    box-shadow: 0px 12px 25px rgba(0, 0, 0, 0.5); /* Opera 10.5, IE 9, Firefox 4+, Chrome 6+, iOS 5 */
+    font-family: 'Gugi', cursive;
+}
+
+.sidenavHeader{
+margin-bottom: 15px;
+}
+
+.sidenavHeader Label{
+  display:block;
+  position: absolute;
+  top:0;
+  margin-top: 15px;
+  padding-bottom: 25px;
+  margin-left: 30px;
+  font-size: 29px;
+  color: #42d1d8;
+}
+#mySidenav a {
+  padding: 8px 8px 8px 32px;
+  text-decoration: none;
+  font-size: 22px;
+  color: #2854b8;
+  display: block;
+  transition: 0.3s;
+  font-family: 'Gugi', cursive;
+  background-color: white;
+}
+#mySidenav .closebtn {
+  display:block;
+  position: absolute;
+  top: 0px;
+  right: 25px;
+  font-weight: 100;
+  margin-left: 100px;
+  color: black;
+  cursor: none;
+  padding-bottom: 0px;
+  padding-bottom: 0px;
+  font-family: 'Noto Serif SC', serif;
+  font-size: 30px;
+  padding-top: 7px;
 }
 }
 @media screen and (min-width: 800px) {
