--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             </div>
             
             <div class="floatingText">
-              India's largest supplier for Cyclopentanone and it's deravatives.
+              India's largest supplier for Cyclopentanone and it's derivatives.
              <div class="floatingSubtextContainer"> <p class="floatingSubtext"> Developers of custom chemical compounds 
               for  chemical and pharma industry needs. </p></div>
             </div>
