webkit appearance modified

--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@ display:none;
 }
 
 #mySidenav .closebtn {
-  display:none;
+  display:none;-webkit-appearance: none;
 }
       body {
         margin: 0;
@@ -628,6 +628,7 @@ margin-bottom: 15px;
   font-family: 'Noto Serif SC', serif;
   font-size: 30px;
   padding-top: 7px;
+  -webkit-appearance: none;
 }
   }
 
