--- a/screens/contact.html
+++ b/screens/contact.html
@@ -405,6 +405,7 @@ function closeNav() {
     -webkit-transition-duration: 0.4s; /* Safari */
     transition-duration: 0.4s;
     outline: none;
+    -webkit-appearance: none;
   }
   .submit {
     background-color: #4caf50;
@@ -647,6 +648,7 @@ padding-bottom: 0px;
   font-family: 'Noto Serif SC', serif;
   font-size: 30px;
   padding-top: 7px;
+  -webkit-appearance: none;
 }
 }
 @media screen and (min-width: 800px) {
