--- a/screens/product/Methyl-4-phenyl-butyrate.html
+++ b/screens/product/Methyl-4-phenyl-butyrate.html
@@ -145,7 +145,7 @@ display:none;
 }
 
 #mySidenav .closebtn {
-  display:none;
+  display:none;-webkit-appearance: none;
 }
   body {
     background: #ffffff;
@@ -448,6 +448,7 @@ margin-bottom: 15px;
   font-family: 'Noto Serif SC', serif;
   font-size: 30px;
   padding-top: 7px;
+  -webkit-appearance: none;
 }
 }
 @media screen and (min-width: 800px) {
