--- a/screens/product/cyclopentylChloride.html
+++ b/screens/product/cyclopentylChloride.html
@@ -149,7 +149,7 @@ display:none;
 }
 
 #mySidenav .closebtn {
-  display:none;
+  display:none;-webkit-appearance: none;
 }
   body {
     background: #ffffff;
@@ -452,6 +452,7 @@ margin-bottom: 15px;
   font-family: 'Noto Serif SC', serif;
   font-size: 30px;
   padding-top: 7px;
+  -webkit-appearance: none;
 }
 }
 @media screen and (min-width: 800px) {
