--- a/screens/product/4Phenyl1Butanol.html
+++ b/screens/product/4Phenyl1Butanol.html
@@ -442,17 +442,21 @@ margin-bottom: 15px;
   display:block;
   position: absolute;
   top: 0px;
-  right: 25px;
+  right: 0px;
   font-weight: 100;
-  margin-left: 100px;
+  margin-left: 70px;
   color: black;
   cursor: none;
   padding-bottom: 0px;
   padding-bottom: 0px;
   font-family: 'Noto Serif SC', serif;
   font-size: 30px;
-  padding-top: 7px;
+  padding-top: 7px;padding-right: 6px;
   -webkit-appearance: none;
+      background: transparent;
+      border: none;
+      background-color: transperant;
+      outline: none;
 }
 }
 @media screen and (min-width: 800px) {
