--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             </div>
 
             <div class="floatingText">
-              India's largest supplier for Cyclopentanone and it's derivatives.
+              India's largest manufacturer and supplier of Cyclopentanone and it's derivatives.
               <div class="floatingSubtextContainer">
                 <p class="floatingSubtext">
                   Developers of custom chemical compounds for chemical and
