--- a/screens/about.html
+++ b/screens/about.html
@@ -63,7 +63,7 @@
       service and customer experience.
     
       <br><br>
-      All these strengths put together, enable us to become India's largest suppliers of Cyclopentanone and its derivatives; 
+      All these strengths put together, enable us to become India's largest manufacturer and supplier of Cyclopentanone and its derivatives; 
       delivering a whooping <span>600 Metric Ton(6,000,000 kilograms) product per annum</span>.
     
     </p>
