--- a/screens/product/4Phenyl1Butanol.html
+++ b/screens/product/4Phenyl1Butanol.html
@@ -3,6 +3,22 @@
   <head>
     <title>4-Phenyl-1-Butanol</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=UA-147321955-1"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag('js', new Date());
+
+      gtag('config', 'UA-147321955-1');
+    </script>
+
     <script src="https://d3js.org/d3.v4.min.js"></script>
     
     <script>
