--- a/index.html
+++ b/index.html
@@ -3,6 +3,22 @@
   <head>
     <title>Freesia Chemicals</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=UA-147321955-1"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag('js', new Date());
+
+      gtag('config', 'UA-147321955-1');
+    </script>
+
     <script
       type="text/javascript"
       src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"
@@ -75,7 +91,8 @@
             </div>
 
             <div class="floatingText">
-              India's largest manufacturer and supplier of Cyclopentanone and it's derivatives.
+              India's largest manufacturer and supplier of Cyclopentanone and
+              it's derivatives.
               <div class="floatingSubtextContainer">
                 <p class="floatingSubtext">
                   Developers of custom chemical compounds for chemical and
@@ -731,7 +748,8 @@ width:100%; */
       padding-bottom: 0px;
       font-family: 'Noto Serif SC', serif;
       font-size: 30px;
-      padding-top: 7px;padding-right: 6px;
+      padding-top: 7px;
+      padding-right: 6px;
       -webkit-appearance: none;
       background: transparent;
       border: none;
