--- a/screens/about.html
+++ b/screens/about.html
@@ -135,13 +135,12 @@
     </p>
 
     <div>
-<h4>Founders:</h4>
+<!-- <h4>Founders:</h4>
 Mr. Ashok Naik<br>
 Mr. Ulhas Naik<br>
-Mr. Arun Naik <br>
-
-    </div>
-    <br>
+Mr. Arun Naik <br> -->
+    <!-- <br> -->
+  </div>
     If interested in buying our products or want to know more, 
     please go to our contact page (<a href="contact.html">here</a>) to get in contact with us.
     <br><br><br>
