--- a/screens/contact.html
+++ b/screens/contact.html
@@ -248,7 +248,7 @@
     <script
       async
       defer
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBdhsIr40qQ0We2uPKYdnTVD6Wiw9vVuaE&callback=initMap"
+      src="https://maps.googleapis.com/maps/api/js?key=&callback=initMap"
     ></script>
 
     <script>
