new products added on homepage

--- a/index.html
+++ b/index.html
@@ -314,11 +314,205 @@
               <h5>CAS No. 96-22-0</h5>
             </div>
           </div>
+
+          <div
+          class="productCard"
+          onclick="window.open('screens/product/diethylKetone.html', '_blank');"
+        >
+          <div class="imageContainer">
+            <img
+              src="./images/diethylKetone.jpg"
+              alt="Norway"
+              class="image"
+            />
+          </div>
+          <div class="productTitle">
+            <h4>Tetrahydropyran</h4>
+            <h5>CAS No. 142-68-7</h5>
+          </div>
+        </div>
+        </div>
+
+        <div class="productListRow">
+          <div
+            class="productCard"
+            onclick="window.open('screens/product/Methyl-4-phenyl-butyrate.html', '_blank');"
+          >
+            <div class="imageContainer">
+              <img
+                src="./images/Methyl-4-phenyl-butyrate.jpg"
+                alt="Norway"
+                class="image"
+              />
+            </div>
+            <div class="productTitle">
+              <h4>Parachloro Meta Xylenol</h4>
+              <h5>CAS No. 88-04-0</h5>
+            </div>
+          </div>
+
+          <div
+            class="productCard"
+            onclick="window.open('screens/product/diethylKetone.html', '_blank');"
+          >
+            <div class="imageContainer">
+              <img
+                src="./images/diethylKetone.jpg"
+                alt="Norway"
+                class="image"
+              />
+            </div>
+            <div class="productTitle">
+              <h4>Parachloro Meta Cresol</h4>
+              <h5>CAS No. 59-50-7</h5>
+            </div>
+          </div>
+
+          <div
+          class="productCard"
+          onclick="window.open('screens/product/diethylKetone.html', '_blank');"
+        >
+          <div class="imageContainer">
+            <img
+              src="./images/diethylKetone.jpg"
+              alt="Norway"
+              class="image"
+            />
+          </div>
+          <div class="productTitle">
+            <h4>Ortho Phthalaldehyde</h4>
+            <h5>CAS No. 643-29-5</h5>
+          </div>
+        </div>
+        </div>
+
+        <div class="productListRow">
+          <div
+            class="productCard"
+            onclick="window.open('screens/product/Methyl-4-phenyl-butyrate.html', '_blank');"
+          >
+            <div class="imageContainer">
+              <img
+                src="./images/Methyl-4-phenyl-butyrate.jpg"
+                alt="Norway"
+                class="image"
+              />
+            </div>
+            <div class="productTitle">
+              <h4>4 Bromoanisole</h4>
+              <h5>CAS No. 104-92-7</h5>
+            </div>
+          </div>
+
+          <div
+            class="productCard"
+            onclick="window.open('screens/product/diethylKetone.html', '_blank');"
+          >
+            <div class="imageContainer">
+              <img
+                src="./images/diethylKetone.jpg"
+                alt="Norway"
+                class="image"
+              />
+            </div>
+            <div class="productTitle">
+              <h4>4 Methoxy Phenacyl Bromide</h4>
+              <h5>CAS No. 2632-13-5</h5>
+            </div>
+          </div>
+
+          <div
+          class="productCard"
+          onclick="window.open('screens/product/diethylKetone.html', '_blank');"
+        >
+          <div class="imageContainer">
+            <img
+              src="./images/diethylKetone.jpg"
+              alt="Norway"
+              class="image"
+            />
+          </div>
+          <div class="productTitle">
+            <h4>1-Hydroxyadamentanol</h4>
+            <h5>CAS No. 768-95-6</h5>
+          </div>
+        </div>
+        </div>
+        <div class="productListRow">
+          <div
+            class="productCard"
+            onclick="window.open('screens/product/Methyl-4-phenyl-butyrate.html', '_blank');"
+          >
+            <div class="imageContainer">
+              <img
+                src="./images/Methyl-4-phenyl-butyrate.jpg"
+                alt="Norway"
+                class="image"
+              />
+            </div>
+            <div class="productTitle">
+              <h4>1-Bromoadamantane</h4>
+              <h5>CAS No. 768-90-1</h5>
+            </div>
+          </div>
+
+          <div
+            class="productCard"
+            onclick="window.open('screens/product/diethylKetone.html', '_blank');"
+          >
+            <div class="imageContainer">
+              <img
+                src="./images/diethylKetone.jpg"
+                alt="Norway"
+                class="image"
+              />
+            </div>
+            <div class="productTitle">
+              <h4>1-Chloroadamentane</h4>
+              <h5>CAS No. 935-56-8</h5>
+            </div>
+          </div>
+
+          <div
+          class="productCard"
+          onclick="window.open('screens/product/diethylKetone.html', '_blank');"
+        >
+          <div class="imageContainer">
+            <img
+              src="./images/diethylKetone.jpg"
+              alt="Norway"
+              class="image"
+            />
+          </div>
+          <div class="productTitle">
+            <h4>Cyclopentane Carboxylic Acid</h4>
+            <h5>CAS No. 3400-45-1</h5>
+          </div>
+        </div>
+        </div>
+
+        <div class="productListRow">
+          <div
+            class="productCard"
+            onclick="window.open('screens/product/Methyl-4-phenyl-butyrate.html', '_blank');"
+          >
+            <div class="imageContainer">
+              <img
+                src="./images/Methyl-4-phenyl-butyrate.jpg"
+                alt="Norway"
+                class="image"
+              />
+            </div>
+            <div class="productTitle">
+              <h4>Alpha Tetralol</h4>
+              <h5>CAS No. 529-33-9</h5>
+            </div>
+          </div>
         </div>
 
         <div class="disclaimerContainer">
           <div class="disclaimer">
-            Posted by: Purnima Naik | © 2019 All rights reserved
+            Posted by: Purnima Naik | &copy; 2019 All rights reserved
           </div>
         </div>
       </div>
