--- a/screens/about.html
+++ b/screens/about.html
@@ -73,7 +73,7 @@
     
       <br><br>
       All these strengths put together, enable us to become India's largest manufacturer and supplier of Cyclopentanone and its derivatives; 
-      delivering a whooping <span>600 Metric Ton(6,000,000 kilograms) product per annum</span>.
+      delivering a whooping <span>600 Metric Ton product per annum</span>.
     
     </p>
 
