New products added on homepage

--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
             </div>
           </div>
 
-          <div
+          <!-- <div
             class="productCard"
             onclick="window.open('screens/product/Bromo5Chloropentane.html', '_blank');"
           >
@@ -260,7 +260,25 @@
               <h4>1-Bromo-5-Chloropentane</h4>
               <h5>CAS No. 54512-75-3</h5>
             </div>
+          </div> -->
+
+          <div
+          class="productCard"
+          onclick="window.open('screens/product/alpha-tetralol.html', '_blank');"
+        >
+          <div class="imageContainer">
+            <img
+              src="./images/alpha-tetralol.jpg"
+              alt="Norway"
+              class="image"
+            />
           </div>
+          <div class="productTitle">
+            <h4>Alpha Tetralol</h4>
+            <h5>CAS No. 529-33-9</h5>
+          </div>
+        </div>
+
 
           <div
             class="productCard"
@@ -317,11 +335,11 @@
 
           <div
           class="productCard"
-          onclick="window.open('screens/product/diethylKetone.html', '_blank');"
+          onclick="window.open('screens/product/Tetrahydropyran.html', '_blank');"
         >
           <div class="imageContainer">
             <img
-              src="./images/diethylKetone.jpg"
+              src="./images/Tetrahydropyran.jpg"
               alt="Norway"
               class="image"
             />
@@ -336,11 +354,11 @@
         <div class="productListRow">
           <div
             class="productCard"
-            onclick="window.open('screens/product/Methyl-4-phenyl-butyrate.html', '_blank');"
+            onclick="window.open('screens/product/Parachloro-meta-xylenol.html', '_blank');"
           >
             <div class="imageContainer">
               <img
-                src="./images/Methyl-4-phenyl-butyrate.jpg"
+                src="./images/Parachloro-meta-xylenol.jpg"
                 alt="Norway"
                 class="image"
               />
@@ -353,11 +371,11 @@
 
           <div
             class="productCard"
-            onclick="window.open('screens/product/diethylKetone.html', '_blank');"
+            onclick="window.open('screens/product/Parachloro-meta-cresol.html', '_blank');"
           >
             <div class="imageContainer">
               <img
-                src="./images/diethylKetone.jpg"
+                src="./images/Parachloro-meta-cresol.jpg"
                 alt="Norway"
                 class="image"
               />
@@ -370,11 +388,11 @@
 
           <div
           class="productCard"
-          onclick="window.open('screens/product/diethylKetone.html', '_blank');"
+          onclick="window.open('screens/product/Ortho-Phthalaldehyde.html', '_blank');"
         >
           <div class="imageContainer">
             <img
-              src="./images/diethylKetone.jpg"
+              src="./images/Ortho-Phthalaldehyde.jpg"
               alt="Norway"
               class="image"
             />
@@ -389,11 +407,11 @@
         <div class="productListRow">
           <div
             class="productCard"
-            onclick="window.open('screens/product/Methyl-4-phenyl-butyrate.html', '_blank');"
+            onclick="window.open('screens/product/4-Bromoanisole.html', '_blank');"
           >
             <div class="imageContainer">
               <img
-                src="./images/Methyl-4-phenyl-butyrate.jpg"
+                src="./images/4-Bromoanisole.jpg"
                 alt="Norway"
                 class="image"
               />
@@ -406,11 +424,11 @@
 
           <div
             class="productCard"
-            onclick="window.open('screens/product/diethylKetone.html', '_blank');"
+            onclick="window.open('screens/product/4-methoxy-phenacyl-bromide.html', '_blank');"
           >
             <div class="imageContainer">
               <img
-                src="./images/diethylKetone.jpg"
+                src="./images/4-methoxy-phenacyl-bromide.jpg"
                 alt="Norway"
                 class="image"
               />
@@ -423,11 +441,11 @@
 
           <div
           class="productCard"
-          onclick="window.open('screens/product/diethylKetone.html', '_blank');"
+          onclick="window.open('screens/product/1-Hydroxyadamentanol.html', '_blank');"
         >
           <div class="imageContainer">
             <img
-              src="./images/diethylKetone.jpg"
+              src="./images/1-Hydroxyadamentanol.jpg"
               alt="Norway"
               class="image"
             />
@@ -441,11 +459,11 @@
         <div class="productListRow">
           <div
             class="productCard"
-            onclick="window.open('screens/product/Methyl-4-phenyl-butyrate.html', '_blank');"
+            onclick="window.open('screens/product/1-Bromoadamantane.html', '_blank');"
           >
             <div class="imageContainer">
               <img
-                src="./images/Methyl-4-phenyl-butyrate.jpg"
+                src="./images/1-Bromoadamantane.jpg"
                 alt="Norway"
                 class="image"
               />
@@ -458,28 +476,28 @@
 
           <div
             class="productCard"
-            onclick="window.open('screens/product/diethylKetone.html', '_blank');"
+            onclick="window.open('screens/product/1-Chloroadamantane.html', '_blank');"
           >
             <div class="imageContainer">
               <img
-                src="./images/diethylKetone.jpg"
+                src="./images/1-Chloroadamantane.jpg"
                 alt="Norway"
                 class="image"
               />
             </div>
             <div class="productTitle">
-              <h4>1-Chloroadamentane</h4>
+              <h4>1-Chloroadamantane</h4>
               <h5>CAS No. 935-56-8</h5>
             </div>
           </div>
 
           <div
           class="productCard"
-          onclick="window.open('screens/product/diethylKetone.html', '_blank');"
+          onclick="window.open('screens/product/cyclopentane-carboxylic-acid.html', '_blank');"
         >
           <div class="imageContainer">
             <img
-              src="./images/diethylKetone.jpg"
+              src="./images/cyclopentane-carboxylic-acid.jpg"
               alt="Norway"
               class="image"
             />
@@ -494,21 +512,23 @@
         <div class="productListRow">
           <div
             class="productCard"
-            onclick="window.open('screens/product/Methyl-4-phenyl-butyrate.html', '_blank');"
+            onclick="window.open('screens/product/1-Adamantanol.html', '_blank');"
           >
             <div class="imageContainer">
               <img
-                src="./images/Methyl-4-phenyl-butyrate.jpg"
+                src="./images/1-Adamantanol.jpg"
                 alt="Norway"
                 class="image"
               />
             </div>
             <div class="productTitle">
-              <h4>Alpha Tetralol</h4>
-              <h5>CAS No. 529-33-9</h5>
+              <h4>1-Adamantanol</h4>
+              <h5>CAS No. 768-90-1</h5>
             </div>
           </div>
+
         </div>
+
 
         <div class="disclaimerContainer">
           <div class="disclaimer">
