--- a/index.html
+++ b/index.html
@@ -516,14 +516,14 @@
           >
             <div class="imageContainer">
               <img
-                src="./images/1-Adamantanol.jpg"
+                src="./images/1-Adamantanol.png"
                 alt="Norway"
                 class="image"
               />
             </div>
             <div class="productTitle">
               <h4>1-Adamantanol</h4>
-              <h5>CAS No. 768-90-1</h5>
+              <h5>CAS No. 768-95-6</h5>
             </div>
           </div>
 
