--- a/index.html
+++ b/index.html
@@ -480,9 +480,10 @@
           >
             <div class="imageContainer">
               <img
-                src="./images/1-Chloroadamantane.jpg"
+                src="./images/1-Chloroadamantane.png"
                 alt="Norway"
                 class="image"
+                style="width:140px;"
               />
             </div>
             <div class="productTitle">
@@ -519,6 +520,7 @@
                 src="./images/1-Adamantanol.png"
                 alt="Norway"
                 class="image"
+                style="width:250px;height:200px"
               />
             </div>
             <div class="productTitle">
