--- a/index.html
+++ b/index.html
@@ -463,9 +463,10 @@
           >
             <div class="imageContainer">
               <img
-                src="./images/1-Bromoadamantane.jpg"
+                src="./images/1-Bromoadamantane.png"
                 alt="Norway"
                 class="image"
+                style="width:140px;"
               />
             </div>
             <div class="productTitle">
@@ -520,7 +521,7 @@
                 src="./images/1-Adamantanol.png"
                 alt="Norway"
                 class="image"
-                style="width:250px;height:200px"
+                style="width:240px;height:200px"
               />
             </div>
             <div class="productTitle">
