Ortho-Phthalaldehyde complete

--- a/index.html
+++ b/index.html
@@ -289,6 +289,7 @@
                 src="./images/4Phynel1Butanol.jpg"
                 alt="Norway"
                 class="image"
+                style="width:200px;height:200px"
               />
             </div>
             <div class="productTitle">
@@ -308,6 +309,7 @@
                 src="./images/Methyl-4-phenyl-butyrate.jpg"
                 alt="Norway"
                 class="image"
+                style="width:255px;height:200px"
               />
             </div>
             <div class="productTitle">
@@ -392,14 +394,15 @@
         >
           <div class="imageContainer">
             <img
-              src="./images/Ortho-Phthalaldehyde.jpg"
+              src="./images/Ortho-Phthalaldehyde.png"
               alt="Norway"
               class="image"
+              style="width:185px;height:200px"
             />
           </div>
           <div class="productTitle">
             <h4>Ortho Phthalaldehyde</h4>
-            <h5>CAS No. 643-29-5</h5>
+            <h5>CAS No. 643-79-8</h5>
           </div>
         </div>
         </div>
