--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
               src="./images/Ortho-Phthalaldehyde.png"
               alt="Norway"
               class="image"
-              style="width:185px;height:200px"
+              style="width:165px;height:200px"
             />
           </div>
           <div class="productTitle">
@@ -414,9 +414,10 @@
           >
             <div class="imageContainer">
               <img
-                src="./images/4-Bromoanisole.jpg"
+                src="./images/4-Bromoanisole.png"
                 alt="Norway"
                 class="image"
+                style="width:80px;height:200px"
               />
             </div>
             <div class="productTitle">
