4-methoxy-phenacyl-bromide complete

--- a/index.html
+++ b/index.html
@@ -432,9 +432,10 @@
           >
             <div class="imageContainer">
               <img
-                src="./images/4-methoxy-phenacyl-bromide.jpg"
+                src="./images/4-methoxy-phenacyl-bromide.png"
                 alt="Norway"
                 class="image"
+                style="width:350px;height:200px"
               />
             </div>
             <div class="productTitle">
