4 Chloro Meta Xylenol completed

--- a/index.html
+++ b/index.html
@@ -360,13 +360,14 @@
           >
             <div class="imageContainer">
               <img
-                src="./images/Parachloro-meta-xylenol.jpg"
+                src="./images/Parachloro-meta-xylenol.png"
                 alt="Norway"
                 class="image"
+                style="width:160px;height:200px"
               />
             </div>
             <div class="productTitle">
-              <h4>Parachloro Meta Xylenol</h4>
+              <h4>Para Chloro Meta Xylenol</h4>
               <h5>CAS No. 88-04-0</h5>
             </div>
           </div>
@@ -383,7 +384,7 @@
               />
             </div>
             <div class="productTitle">
-              <h4>Parachloro Meta Cresol</h4>
+              <h4>Para Chloro Meta Cresol</h4>
               <h5>CAS No. 59-50-7</h5>
             </div>
           </div>
